--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,23 +1,25 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
   <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title>Principal</title>
-     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="{% static "imagenes/logo_preiser.png" %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static "vendor/bootstrap/css/bootstrap.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}">
    
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" type="text/css" href="{% static "vendor/fontawesome-free/css/all.min.css" %}">
+    <link rel="stylesheet" type="text/css" href="{%static 'font-awesome-4.7.o/css/font-awesome.css'%">
     
 
     <!-- Page level plugin CSS-->
@@ -27,156 +29,154 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/sb-admin.css" %}">
     <script src="{% static "js/jquery-3.2.1.js" %}"></script>
     <script src="{% static "js/jquery.formset.js" %}"></script>
+    <script src="{% static "css/prueba.js" %}"></script>
 
   </head>
-  
-  <header>
-       <div class="navbar navbar-expand navbar-dark fixed-top">
-         <img src="{% static "imagenes/Faviconpreiser.png" %}" alt="Logo Preiser" width="130" height="50">
-        <div class="container">    
 
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-      
-      </button>
-
-    
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto ml-md-0" id="botones">
-       
-        
-        <li id="c" class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i id="c1" class="fas fa-user-circle fa-fw"><div id="user">{{user.username}}</div></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-           <a  class="dropdown-item" href="#"><span id="ay" class="fas fa-question-circle"></span>Ayuda</a> 
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-              <img src="{% static "imagenes/iconos/account-logout-2x.png" %}">
-            Cerrar Sesion</a>
-          </div>
-        </li>
-      </ul>
-        </div>
-
-    </div>
-
-  </header>
-
-<br><br><br>
-  <body id="page-top">
+    <body >
 
     <div id="wrapper">
-
-      <!-- Sidebar -->
-      <ul class="sidebar navbar-nav">
-       <li class="nav-item active">
-          <a class="nav-link" href="{% url 'vista_inicio'%}">
-            <span id="e0" class="fas fa-home"></span>
-            <span>Principal</span>
-          </a>
-        </li>
-            
-           <li class="nav-item">
-          <a class="nav-link " href="{%url 'vista_lista_material' %}">
-           <i id="e2" class="material-icons dp48">library_books</i>
-            <span>Materiales y Elementos</span>
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'lista_prestamo'%}">
-             <i id="e3" class="material-icons dp48">collections_bookmark</i>
-            <span>Prestamos y Salidas</span></a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             <i id="e4" class="material-icons dp48">filter_frames</i>
-            <span>Reportes</span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-              <a class="dropdown-item" href="{% url 'vista_reporte'%}">Reporte de Prestamos</a>
-              <a class="dropdown-item" href="{% url 'vista_materiales_disponibles'%}">Reporte de Materiales</a>
-          </div>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i id="e6"  class="material-icons dp48">settings_applications</i>
-            <span>Configuracion</span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-             
-        
-            
-
-            <a class="dropdown-item" href="{%url 'vista_lista_programas' %}"> <span id="a1" class="fa fa-folder-open"></span> Programa</a>
-            <a class="dropdown-item" href="{% url 'detalle_ficha' %}"><span id="a2"class="fas fa-file-alt"></span>  Ficha</a>
-            <a class="dropdown-item" href="{% url 'vista_lista_bodega' %}"><span id="a3" class="fas fa-database"></span>  Bodega</a>
-            <a class="dropdown-item" href="{% url 'lista_cuentadante' %}"><span id="a4" class="fas fa-address-card"></span> Cuentadante</a>
-            <a class="dropdown-item" href="{% url 'vista_lista_aprendiz' %}"><span id="a5"class="fab fa-angular"></span>  Aprendiz</a>
-            <a class="dropdown-item" href="{% url 'nombre_categoria'%}"><span id="a6"class="fas fa-book"></span>  Categoria</a>
-            <a class="dropdown-item" href="{% url 'vista_lista_marca'%}"><span id="a7"class="fas fa-barcode"></span>  Marca</a>
-            <a class="dropdown-item" href="{% url 'vista_lista_nombre_material'%}"><span id="a7"class="fas fa-book"></span>  Nombre Material</a>
-     
+  
+        <header>
            
-          </div>
-        </li>
+           <div class="navbar navbar-expand navbar-dark fixed-top">
+             <img id="Logo" src="{% static "imagenes/Faviconpreiser.png" %}" alt="Logo Preiser" width="130" height="50">
+            <div class="container">    
+
+          <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
           
-      </ul>
+          </button>
+
+         <div class="menu">
+           <a id="icmenu"><span class="fas fa-bars"></span></a>
+         </div>
+
+          <!-- Navbar -->
+          <ul class="navbar-nav ml-auto ml-md-0" id="botones">
+           
+            
+            <li id="c" class="nav-item dropdown no-arrow">
+              <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               <div id="admin"><i id="c1" class="fas fa-user-circle fa-fw"><div id="user">{{user.username}}</div></i></div> 
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+               <a  class="dropdown-item" href="{% url 'vista_register' %}"><span id="ay" class="fas fa-user-alt"></span>Perfil</a> 
+                 <a  class="dropdown-item" href="#"><span id="ay" class="fas fa-question-circle"></span>Ayuda</a> 
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal"><span id="ay" class="fas fa-sign-out-alt"></span>Cerrar Sesion</a>
+                
+                
+              </div>
+            </li>
+          </ul>
+            </div>
+
+        </div>
+
+        <div id="peque">   
+      <nav >  
+       <ul>
+         <li>
+           <a id="selector" href="{% url 'vista_inicio'%}">
+             <span id="e1" class="fas fa-home"></span>
+              Principal
+             <span></span>
+           </a>
+         </li>
+         <li>
+           <a id="selector" href="{%url 'vista_lista_material' %}">
+             <span id="e1" class="fas fa-box"></span>
+              Materiales y Elemtos
+             <span></span>
+           </a>
+         </li>
+         <li>
+           <a id="selector" href="{% url 'lista_prestamo'%}">
+             <span id="e1" class="fas fa-handshake"></span>
+              Prestamos y salidas
+             <span></span>
+           </a>
+         </li>
+          <li class="submenua">
+           <a id="selector" href="#">
+             <span id="e1" class="far fa-chart-bar"></span>Reportes<span id="chevron" class="fas fa-chevron-down"></span></a>
+            <ul class="childrenn">
+               <li>
+                 <a href="{% url 'vista_reporte'%}"><span id="e2" class="fas fa-file-alt"></span>Reporte de Prestamos</a>
+               </li>
+               <li>
+                 <a href="{% url 'vista_materiales_disponibles'%}"><span id="e2" class="fas fa-file-alt"></span>Reporte de Materiales</a>
+               </li>
+             </ul>
+         </li>
+         <li class="submenua">
+           <a id="selector" href="#">
+             <span id="e1" class="fas fa-cogs"></span>Configuracion<span id="chevron" class="fas fa-chevron-down"></span>
+           </a>
+            <ul class="childrenn">
+               <li>
+                 <a href="{%url 'vista_lista_programas' %}"><span id="e2" class="fas fa-desktop"></span>Programa</a>
+               </li>
+               <li>
+                 <a href="{% url 'detalle_ficha' %}"><span id="e2" class="fas fa-file-alt"></span>Ficha</a>
+               </li>
+               <li>
+                 <a href="{% url 'vista_lista_bodega' %}"><span id="e2" class="fas fa-box"></span>Bodega</a>
+               </li>
+               <li>
+                 <a href="{% url 'lista_cuentadante' %}"><span id="e2" class="fas fa-address-card"></span>Cuentadante</a>
+               </li>
+               <li>
+                 <a href="{% url 'vista_lista_aprendiz' %}"><span id="e2" class="fas fa-user"></span>Aprendiz</a>
+               </li>
+               <li>
+                 <a href="{% url 'nombre_categoria'%}"><span id="e2" class="fas fa-book"></span>Categoria</a>
+               </li>
+               <li>
+                 <a href="{% url 'vista_lista_marca'%}"><span id="e2" class="fas fa-stamp"></span>Marca</a>
+               </li>
+               <li>
+                 <a href="{% url 'vista_lista_nombre_material'%}"><span id="e2" class="fas fa-book"></span>Nombre Material</a>
+               </li>                                                                                          
+             </ul>
+           </li>
+         </ul>
+       </nav>
+     </div>
 
 
-      <div id="content-wrapper">
+
+      </header>
+
+
+  <div id="content-wrapper" style="margin-top:58px;">
 
         <div class="container-fluid">
 
 
           <div class="titulo">
-             <h1 >Bienvenidos a Preiser</h1>
+             <h1>Bienvenidos a Preiser</h1>
           </div>  
-          <br>
-          <br>       
-          <div class="linea">
-             <div class="t">
-              <a class="material-icons dp48" href="Bodega-Material.html" id="icon">event_available</a>
-              <p>material</p>
-            </div>
-           
 
-            <div class="t">
-                   <a href="Devoluciones.html" id="icon" class="material-icons dp48">swap_horiz</a>
-                  <p>prestamo y devoluciones</p>
-            </div>        
-        
-            <div class="t">
-              <a class="material-icons dp48" href="" id="icon">report</a> 
-              <p>reportes</p>
-            </div>  
+          <div class="ini">
+            <ul>
+              <li>
+                <a href="{%url 'vista_lista_material' %}"><span class="fas fa-box"></span></a>
+                <p>Materiales y Elementos</p>
+              </li>
+              <li>
+                <a href="{% url 'vista_reporte'%}"><span class="far fa-chart-bar"></span></a>
+                <p>Reportes</p>
+              </li>
+              <li>
+                <a href="{% url 'lista_prestamo'%}"><span class="fas fa-handshake"></span></a>
+                <p>Prestamos y Salidas</p>
+              </li>
 
+            </ul>
           </div>
 
-          
-        
-      </div>
-          <!-- Breadcrumbs-............................................... -->
-     
-
-             {% block contenido %}
-            
-          {% endblock contenido %}
-
-          <!-- Area Chart Example-->
-
-          
-
-          <!-- DataTables Example -->
-         
-        <!-- /.container-fluid -->
-
-        <!-- Sticky Footer -->
-        <footer class="sticky-footer">
+        <footer class="sticky-footer" style=" background:#EEEEEE;">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
               <span>SENA CTPI 2018</span>
@@ -184,14 +184,13 @@
           </div>
         </footer>
 
-      </div>
-      <!-- /.content-wrapper -->
+      
 
     </div>
 
 
   </div>
-    <!-- /#wrapper -->
+
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
