--- a/static/css/sb-admin.css
+++ b/static/css/sb-admin.css
@@ -395,7 +395,7 @@ footer.sticky-footer {
   position: absolute;
   right: 0;
   bottom: 0;
-  width:100% ;
+  width: 100%;
   height: 80px;
   background-color: #6c757d;
 }
@@ -647,12 +647,15 @@ header nav{
   max-width: 250px;
   margin-top: 62px;
   padding-top: 5px;
+  
   height: calc(100% - 58px);
   overflow-y: auto;
   position: fixed;
 
 
 }
+
+
 
 
 header nav ul{
@@ -708,7 +711,16 @@ header nav ul li .childrenn li a{
   height:67%;
 }
 
-@media screen and (max-width: 768px){
+
+#chevron{
+  float: right;
+  position: relative;
+  top: 3px;
+  margin-right: 0;
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 650px){
   header{
     width: 0;
   }
@@ -717,6 +729,7 @@ header nav ul li .childrenn li a{
     width: 10%;
     position: fixed;
     top: 0px;
+
    
   }
   .menu #icmenu{
@@ -725,6 +738,7 @@ header nav ul li .childrenn li a{
     margin: 0px auto;
     overflow: hidden;    
     text-decoration: none;
+
 
   }
   .menu span{
@@ -736,21 +750,51 @@ header nav ul li .childrenn li a{
     height: calc(100%-58px);
     position: fixed;
     overflow-y: scroll;
-    right: 100%;
+    right:100%;
     
   }
-}
-@media screen and (min-width: 769px){
-  header nav{
-    left: 0;
-    
+
+
+  #cajota{
+
+   width: 100%;
   }
+
+  #id_imagen{
+    width: 90%;
+  }
+
+  #centrar{
+  
+  width: 98%;
+  margin:auto;  
+
 }
 
-#chevron{
-  float: right;
-  position: relative;
-  top: 3px;
-  margin-right: 0;
-  margin-left: 10px;
+.ini ul li a span{
+  color: #fc7323;
+  font-size:20vw;
 }
+
+.titulo{
+  background: #238276; 
+ 
+  height: 100%;
+  margin: auto;
+  text-align: center;
+ 
+}
+
+.titulo h1{
+  color: #fff;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 12vw;
+  height: 100%;
+  margin: auto 0px;
+  background: #238276;
+}
+
+
+}
+
