--- a/templates/agregar_aprendiz.html
+++ b/templates/agregar_aprendiz.html
@@ -21,6 +21,18 @@ Agregar Aprendiz
                 </div>
               </div>
            </div>
+	
+	   <div class="form-group">
+              <div >
+                <div >
+                  {{formulario.apellido.errors}}
+                  <div class="form-label-group">
+                    {{formulario.apellido}}
+                    <label for="apellido">Apellido</label>
+                  </div>
+                </div>
+              </div>
+           </div>		
 
            <div class="form-group">
               <div >
