--- a/templates/agregar_aprendiz.html
+++ b/templates/agregar_aprendiz.html
@@ -16,13 +16,13 @@ Agregar Aprendiz
                 	{{formulario.nombre.errors}}
                   <div class="form-label-group">
                     {{formulario.nombre}}
-                    <label for="nombre">nombre</label>
+                    <label for="nombre">Nombre</label>
                   </div>
                 </div>
               </div>
            </div>
-	
-	   <div class="form-group">
+
+           <div class="form-group">
               <div >
                 <div >
                   {{formulario.apellido.errors}}
@@ -32,8 +32,8 @@ Agregar Aprendiz
                   </div>
                 </div>
               </div>
-           </div>		
-
+           </div>
+           
            <div class="form-group">
               <div >
                 <div >
